# LebotClaw

./: .gitignore  LICENSE  LebotClaw开发任务单_V1_2026-05-03.md  README.md  pyproject.toml
docs/: architecture.md  web-ui.md
docs/spec/super-agent/: design.md  requirements.md  tasks.md
examples/: custom_agent.py  quick_start.py
scripts/: seed_wiki_warmth.py
src/lebotclaw/: __init__.py
src/lebotclaw/adapters/: __init__.py  aigw.py  arkcoding.py  base.py  deepseek.py  doubao.py  glm.py  innoSpark.py  kimi.py  qwen.py
src/lebotclaw/channels/: __init__.py  base.py  bridge.py  dispatcher.py
src/lebotclaw/channels/feishu/: __init__.py  cards.py  client.py
src/lebotclaw/core/: __init__.py  agent.py  cli.py  commands.py  distiller.py  evolve.py  flow.py  memory.py  moderation.py  planner.py  router.py  sandbox.py  skills.py  skillstore.py  wiki.py  workspace.py
src/lebotclaw/core/banned_words/: abuse.json  nsfw.json  (+2 more)
src/lebotclaw/education/: __init__.py  assessment.py  heads.py
src/lebotclaw/packs/: __init__.py  base.py
src/lebotclaw/scheduler/: __init__.py  job_runner.py  job_store.py  models.py  prompts.py  scheduler.py
src/lebotclaw/tools/: __init__.py  base.py  registry.py
src/lebotclaw/web/: __init__.py  app.py  chat_bridge.py  moderation_log.py  proactive.py  quiz.py  report.py  routes_api.py  runtime.py  session_manager.py  tts_doubao.py
tests/: test_agent.py  test_collapse.py  test_distiller.py  test_evolve.py  test_flow.py  test_moderation.py  test_packs.py  test_router.py  test_skillstore.py  test_storm_guard.py  test_tools.py  test_workspace.py
(+23 files in other folders)
